# chunk-tuner

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: SUMMARY.md  cli_reference.md  configuration.md  contributing.md  faq.md  getting_started_for_implementers.md  index.md  mcp_setup.md  metrics.md  metrics_glossary.md  providers.md  python_api.md  quickstart.md  strategy_guide.md  troubleshooting.md
docs/api/: chunking.md  index.md  models.md
docs/api/cache/: chunk_cache.md  embedding_cache.md  wrapped_embeddings.md
docs/api/chunking/: agentic.md  code_ast.md  code_window.md  fixed_tokens.md  late_chunking.md  markdown_semantic.md  pdf_structural.md  recursive_character.md  semantic.md  structural_semantic.md
docs/api/eval/: cost_estimator.md  dataset_builder.md  embeddings.md  evaluator.md  ragas_bridge.md  score_calculator.md
docs/api/ingestion/: file_ingestor.md  repo_ingestor.md  url_ingestor.md
docs/api/tuner/: auto_tuner.md
docs/integrations/: haystack.md  langchain.md  llamaindex.md
docs/js/: sidebar-toggle.js
docs/stylesheets/: extra.css
examples/financial_analysis/: README.md  pyproject.toml  requirements.txt  run_benchmark.py
scripts/: gen_api_pages.py  release.sh
src/chunktuner/: __init__.py  config.py  models.py
src/chunktuner/api/: auth.py  routes.py  security.py
src/chunktuner/cache/: __init__.py  chunk_cache.py  embedding_cache.py  wrapped_embeddings.py
src/chunktuner/chunking/: __init__.py  agentic.py  bootstrap.py  code_ast.py  code_window.py  fixed_tokens.py  late_chunking.py  markdown_semantic.py  pdf_structural.py  recursive_character.py  registry.py  semantic.py  structural_semantic.py  validation.py
src/chunktuner/cli/: __init__.py  analyze_cmd.py  cache_cmd.py  common.py  compare_cmd.py  estimate_cmd.py  evaluate_cmd.py  init_cmd.py  preview_cmd.py  recommend_cmd.py
src/chunktuner/eval/: __init__.py  cost_estimator.py  dataset_builder.py  effective_k.py  embeddings.py  evaluator.py  ragas_bridge.py  score_calculator.py  trivial_dataset.py
src/chunktuner/ingestion/: __init__.py  content_type.py  file_ingestor.py  preprocessor.py  repo_ingestor.py  url_ingestor.py
src/chunktuner/mcp/: __init__.py  prompts.py  resources.py  server.py  (+2 more)
tests/integration/: test_auto_tuner_parallel.py  test_cli.py  test_financial_example.py  test_mcp_fastmcp_client.py  test_mcp_service.py  test_recommend_smoke.py
tests/unit/: test_agentic_truncation.py  test_api_routes.py  test_cache.py  test_chunk_from_document.py  test_chunking_offsets.py  test_cost_estimator.py  test_evaluator_dummy.py  test_evaluator_metrics.py  test_score_calculator.py
theme_custom/: main.html
(+3 files in other folders)
