[project]
name = "chunktuner"
version = "0.1.0"
description = "Auto chunking tuner and MCP server for RAG pipelines"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "typer>=0.12",
    "pydantic>=2.0",
    "litellm>=1.40",
    "rich>=13.0",
    "fastapi>=0.111",
    "uvicorn>=0.29",
    "numpy>=1.26",
    "tenacity>=8.0",
    "tiktoken>=0.7",
    "pyyaml>=6.0.3",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
mcp = ["mcp[cli]>=1.7"]
docling = ["docling>=2.0"]
ragas = ["ragas>=0.1"]
semantic = ["semchunk>=1.0"]
code = ["tree-sitter>=0.22", "tree-sitter-python", "tree-sitter-javascript"]
all = ["chunktuner[mcp,docling,ragas,semantic,code]"]

[project.scripts]
chunk-tune = "chunktuner.cli:app"
chunk-tune-mcp = "chunktuner.mcp.server:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chunktuner"]

[tool.ruff]
src = ["src", "tests"]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"src/chunktuner/cli/**/*.py" = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
    "mcp[cli]>=1.7",
]
